--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-    <a href="https://mestreacasa.gva.es/web/ieselgrao"><h1>Criptomonedas</h1></a>
+    <a href="index.html"><h1>Criptomonedas</h1></a>
 </header>
 <hr>
 <body>
-    
-    
+    <main>
+<div class="bit">
+    <a href="cripo.html">Bitcoin <img src="/img/bitcoin.png" alt="bitcoin" width="200"></a> 
+</div>
+
+<div class="eth">
+    <a href="index.html">Etherum <img src="/img/etherum.png" alt="etherum" width="200"></a> 
+</div>
+
+<div class="lit">
+    <a href="index.html">Litecoin <img src="/img/litecoin.png" alt="litecoin" width="200"></a> 
+</div>
+<p>Web desarollada por Antonio Cumplido </p>
+
+
+</main>
 </body>
 </html>
