--- a/cripo.html
+++ b/cripo.html
@@ -13,7 +13,7 @@
 <hr>
 <body>
     <main>
-        <form action="Conversor">
+        <form action="con.php">
             Bitcoin<input type="number"> Valor 39.262€
             <br>
             <br>
