--- a/cripo.html
+++ b/cripo.html
@@ -22,7 +22,7 @@
 
         </form>
 
-        <p>Web desarollada por Antonio Cumplido</p>
+        <p>Web desarollada por <a class="color">Antonio Cumplido</a> </p>
 
 
     </main>
