--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="lit">
     <a href="index.html">Litecoin <img src="/img/litecoin.png" alt="litecoin" width="200"></a> 
 </div>
-<p>Web desarollada por Antonio Cumplido </p>
+<p>Web desarollada por <a class="color">Antonio Cumplido</a> </p>
 
 
 </main>
