--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main>
 <div class="bit">
-    <a href="cripo.html">Bitcoin <img src="/img/bitcoin.png" alt="bitcoin" width="200"></a> 
+    <a href="cripo.html">Bitcoin <img src="/bitcoin.png" alt="bitcoin" width="200"></a> 
 </div>
 
 <div class="eth">
