--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <body>
     <main>
 <div class="bit">
-    <a href="cripo.html">Bitcoin <img src="/bitcoin.png" alt="bitcoin" width="200"></a> 
+    <a href="cripo.html">Bitcoin <img src="img/bitcoin.png" alt="bitcoin" width="200"></a> 
 </div>
 
 <div class="eth">
-    <a href="index.html">Etherum <img src="/img/etherum.png" alt="etherum" width="200"></a> 
+    <a href="index.html">Etherum <img src="img/etherum.png" alt="etherum" width="200"></a> 
 </div>
 
 <div class="lit">
-    <a href="index.html">Litecoin <img src="/img/litecoin.png" alt="litecoin" width="200"></a> 
+    <a href="index.html">Litecoin <img src="img/litecoin.png" alt="litecoin" width="200"></a> 
 </div>
 <p>Web desarollada por <a class="color">Antonio Cumplido</a> </p>
 
